--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,10 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
+# misc
+.DS_Store
